fixed mobile rendering gap on footer

--- a/techWrench/src/app/components/footer.module.css
+++ b/techWrench/src/app/components/footer.module.css
@@ -1,6 +1,7 @@
 .main {
   min-height: 10vh;
   width: 100%;
+  margin-top: -1px;
   padding: 2rem;
   color: #051D22;
   background-color: #CFC6BB;
